examples/ok/00_minimal.bina
// OK: minimal valid program and required entry point.
fn main() -> int {
    return 0;
}
